testsuite/tests/parser/should_fail/OpaqueParseFail2.stderr

OpaqueParseFail2.hs:4:12: error: [GHC-58481]
    Parse error on input ‘SPECIALISE’.
    Expected one of 'as', 'hiding', 'qualified', 'export', 'label',
                    'dynamic', 'safe', 'interruptible', 'unsafe', 'family', ...
